[ADD] carrito de compras, CRUD en carrito de compras con LS, boton realizar pago

--- a/src/app/client/home/home.component.css
+++ b/src/app/client/home/home.component.css
@@ -17,9 +17,18 @@
   border: 1px solid #F77F00 !important
 }
 
+.boton-pay {
+  background-color: #FCBF49;
+  border: 1px solid #FCBF49 !important;
+}
+
 .cats {
   background-color: #9DD9D2;
   cursor: pointer;
+}
+
+.cats-detail {
+  background-color: #9DD9D2;
 }
 
 .emps {
