--- a/src/app/client/navbar-desktop/navbar-desktop.component.css
+++ b/src/app/client/navbar-desktop/navbar-desktop.component.css
@@ -4,6 +4,12 @@
   color: gray;
 }
 
+.btn-primary {
+  background-color: #003049;
+  border: 1px solid #003049 !important;
+  border-radius: 25px;
+}
+
 .img-profile {
   border-color: black !important;
   border-radius: 50% !important;
@@ -45,11 +51,11 @@
 }
 
 .text-color {
-  color: #f5f6f7;
+  color: #003049;
 }
 
 .text-color-min {
-  color: #f5f6f7;
+  color: #003049;
   font-size: .75rem;
 }
 
@@ -78,4 +84,9 @@
 
 .shoppingCart, .profile-settings {
   cursor: pointer;
+}
+
+.car {
+  background-color: white;
+  border-radius: 10px;
 }
