--- a/src/app/client/navbar-desktop/navbar-desktop.component.html
+++ b/src/app/client/navbar-desktop/navbar-desktop.component.html
@@ -117,7 +117,7 @@
           <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 col-2 px-1">
             <p class="my-0 text-color-min">{{cart.cantidad}}</p>
           </div>
-          <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 col-1 px-0" (click)="borrarCarrito(cart._id)">
+          <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 col-1 px-0" (click)="borrarCarrito(i)">
             <fa-icon [icon]="faTrashAlt" class="m-0 p-0" style="color: #D62828;"></fa-icon>
           </div>
         </div>
