--- a/src/app/client/coordenadas/coordenadas.component.html
+++ b/src/app/client/coordenadas/coordenadas.component.html
@@ -1,1 +1,26 @@
-<p>coordenadas works!</p>
+<div class="container-fluid">
+    <div class="row my-1">
+        <h2 class="text-center">¡Tu orden está casi lista!</h2>
+    </div>
+    <div class="row my-1">
+        <h6 class="text-center">Indica la ubicación a la que deseas enviar tu pedido</h6>
+    </div>
+    
+</div>
+
+<div class="d-flex justify-content-center my-3">
+    <div class="row" id="mapa-mapbox"></div>
+</div>
+
+<div class="container mt-4">
+    <div class="row d-flex align-items-center">
+        <div class="col-4 d-flex justify-content-start">
+            <h6 class="title-producto d-flex align-items-center">
+                <fa-icon [icon]="faCaretLeft" class="px-2"></fa-icon>Regresar
+            </h6>
+        </div>
+        <div class="col-8 d-flex justify-content-end">
+            <button class="btn btn-primary button-mobile" (click)="guardarCoordenadas()" routerLink="pay">Continuar</button>
+        </div>
+    </div>
+</div>
