--- a/src/app/client/coordenadas/coordenadas.component.html
+++ b/src/app/client/coordenadas/coordenadas.component.html
@@ -15,7 +15,7 @@
 <div class="container mt-4">
     <div class="row d-flex align-items-center">
         <div class="col-4 d-flex justify-content-start">
-            <h6 class="title-producto d-flex align-items-center">
+            <h6 class="title-producto d-flex align-items-center" routerLink="home">
                 <fa-icon [icon]="faCaretLeft" class="px-2"></fa-icon>Regresar
             </h6>
         </div>
