--- a/src/app/client/pagos/pagos.component.html
+++ b/src/app/client/pagos/pagos.component.html
@@ -1,1 +1,79 @@
-<p>pagos works!</p>
+<div class="container-fluid">
+    <div class="row my-1">
+        <h2 class="text-center">¡Confirma tu compra!</h2>
+    </div>
+    <div class="row my-1">
+        <h6 class="text-center">Por favor, verifica tus productos y realiza el pago para seguir disfrutando de todos nuestros servicios</h6>
+    </div>
+</div>
+
+<div class="container table-responsive my-4">
+    <table class="table table-sm mx-auto col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+        <thead>
+            <tr>
+                <th>ID</th>
+                <th>Producto</th>
+                <th>Cantidad</th>
+                <th>Precio</th>
+            </tr>
+        </thead>
+        <tbody *ngFor="let carrito of carritoFinal; let i = index;">
+            <tr>
+                <td>{{carrito._id}}</td>
+                <td>{{carrito.nombreProducto}}</td>
+                <td>{{carrito.cantidad}}</td>
+                <td>{{carrito.precio}}</td>
+            </tr>
+        </tbody>
+    </table>
+</div>
+
+<div class="container" style="background-color: #FCBF49; width: 90vw;">
+    <div class="row px-2 py-1">
+        <h4>Detalles del pago</h4>
+        <hr>
+    </div>
+    <div class="row px-2 py-1">
+        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-6 text-start">
+            <h6>Subtotal</h6>
+        </div>
+        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-6 text-end">
+            <h6>{{subtotal}}</h6>
+        </div>
+    </div>
+    <div class="row px-2 py-1">
+        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-6 text-start">
+            <h6>ISV</h6>
+        </div>
+        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-6 text-end">
+            <h6>{{ISV}}</h6>
+        </div>
+    </div>
+    <div class="row px-2 py-1">
+        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-6 text-start">
+            <h6>Comisión</h6>
+        </div>
+        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-6 text-end">
+            <h6>{{comisionTotal}}</h6>
+        </div>
+    </div>
+    <div class="row px-2 py-1 d-flex align-items-center">
+        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-6 text-start">
+            <h4>Total a pagar</h4>
+        </div>
+        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-6 text-end">
+            <h4>L {{total}}</h4>
+        </div>
+    </div>
+</div>
+
+<div class="container d-flex justify-content-center my-4 pb-4">
+    <div class="col-4 d-flex justify-content-start">
+        <h6 class="title-producto d-flex align-items-center" routerLink="map">
+            <fa-icon [icon]="faCaretLeft" class="px-2"></fa-icon>Regresar
+        </h6>
+    </div>
+    <div class="col-8 d-flex justify-content-end">
+        <button type="button" class="btn btn-primary vaciarCart">Pagar L {{total}}</button>
+    </div>
+</div>
