--- a/src/app/client/pagos/pagos.component.html
+++ b/src/app/client/pagos/pagos.component.html
@@ -74,6 +74,118 @@
         </h6>
     </div>
     <div class="col-8 d-flex justify-content-end">
-        <button type="button" class="btn btn-primary vaciarCart">Pagar L {{total}}</button>
+        <button type="button" class="btn btn-primary" (click)="open(transaccion)">Pagar L {{total}}</button>
     </div>
 </div>
+
+<!-- Pantalla modal con formulario para crear publicaciones -->
+<ng-template #transaccion let-modal>
+    <div class="modal-header">
+      <h3 class="modal-title mb-0" id="modal-basic-title">Confirmar transacción</h3>
+
+    </div>
+    <div class="modal-body" style="padding-top: 0px; padding-bottom: 0px;">
+      <!--<ngb-alert type="success" class="mt-1" *ngIf="successMessage">{{ successfull }}</ngb-alert>-->
+      <form [formGroup]="formPagos" (ngSubmit)="limpiar()">
+        <div class="form-group py-2" style="margin-bottom: 0px; padding-bottom: 0px;">
+          <label for="inputNumeroTarjeta">Tarjeta de crédito</label>
+          <input formControlName="numeroTarjeta" type="text" class="form-control" id="inputNumeroTarjeta" placeholder="visa, mastercard, discover" required>
+          <p [ngClass]="{'display-block': numeroTarjeta}" class="error-message">Numero de tarjeta no es válido</p>
+        </div>
+        <div class="form-row row py-2">
+          <div class="col-md-6" style="padding-top: 2px; margin-bottom: 3px;">
+            <label for="inputCalendar">Fecha de vencimiento</label>
+            <input formControlName="fechaVencimiento" type="date" class="form-control" id="inputCalendar" [min]="dateToday | date:'yyyy-MM-dd'" placeholder="Insertar fecha" required>
+            <p [ngClass]="{'display-block': fechaVencimiento}" class="error-message">Fecha de vencimiento no válida</p>
+          </div>
+          <div class="col-md-6" style="padding-top: 2px; margin-bottom: 3px;">
+            <label for="inputCVV">CVV</label>
+            <input formControlName="cvv" type="number" class="form-control" id="inputCVV" placeholder="cvv" required>
+            <p [ngClass]="{'display-block': cvv}" class="error-message">Ingrese un cvv válido</p>
+          </div>
+        </div>
+        <div class="form-group py-2" style="margin-bottom: 0px; padding-bottom: 0px;">
+            <label for="inputDescripcion">Descripción adicional</label>
+            <input formControlName="descripcion" type="text" class="form-control" id="inputDescripcion" placeholder="p.e. tocar timbre, recibirá Juana" required>
+            <p [ngClass]="{'display-block': descripcion}" class="error-message">Descripción adicional no válida</p>
+          </div>
+      </form>
+    </div>
+    <div class="modal-footer">
+      <button [disabled]="formPagos.invalid" type="submit" class="btn btn-primary" (click)="pagar()" (click)="SuccessfullMessage()" (click)="limpiar()">      
+        Confirmar pago
+      </button>
+      <button type="button" class="btn btn-outline-danger mr-2" (click)="modal.close()" (click)="limpiar()">Cancelar</button>
+    </div>
+</ng-template>
+
+<!-- Pantalla modal con formulario para crear publicaciones -->
+<!--<ng-template #transaccion let-modal>
+    <div class="modal-header">
+      <h2 class="modal-title mb-0">Ingrese los datos para realizar el pago y confirmar la orden</h2>
+      <button class="btn btn-sm close" aria-label="close" type="button" (click)="modal.dismiss()" (click)="limpiar()">
+        <span aria-hidden="true" style="font-size: 20px;">&times;</span>
+      </button>
+    </div>
+    <div class="modal-body" style="padding-top: 0px; padding-bottom: 0px;">
+      <!--<ngb-alert type="success" class="mt-1" *ngIf="successMessage">{{ successfull }}</ngb-alert>
+      <form [formGroup]="formPagos" (ngSubmit)="limpiar()">
+        <div class="form-row d-flex py-2">
+          <div class="form-group col-7 text-center pl-auto">
+            <p [ngClass]="{'display-block': nombreProducto}" class="error-message">Nombre de producto no válido</p>
+            <label for="inputNameProduct">Producto</label>
+            <input formControlName="nombreProducto" type="text" class="form-control" id="inputNameProduct" placeholder="nombre" required>
+          </div>
+          <div class="form-group col-5 text-center">
+            <p [ngClass]="{'display-block': codigoProducto}" class="error-message">Código de producto no válido</p>
+            <label for="inputCodProducto">Cod. Producto</label>
+            <input formControlName="codigoProducto" type="text" class="form-control" placeholder="ejem. maskn95" id="inputCodProducto" required>
+          </div>
+        </div>
+        <div class="form-group py-2 text-center">
+          <p [ngClass]="{'display-block': descripcionProducto}" class="error-message">Descripción no válida</p>
+          <label for="inputDesProd">Descripción</label>
+          <input formControlName="descripcionProducto" type="text" class="form-control" placeholder="descripción" id="inputDesProd" required>
+        </div>
+        <div class="form-row d-flex py-2">
+          <div class="form-group col-md-4 text-center">
+            <p [ngClass]="{'display-block': disponible}" class="error-message">Disponibilidad no válida</p>
+            <label for="inputDesponible">¿Disponible?</label>
+            <input formControlName="disponible" type="number" class="form-control" placeholder="0: no, 1: si" id="inputDesponible" required>
+          </div>
+          <div class="form-group col-md-4 text-center">
+            <p [ngClass]="{'display-block': precio}" class="error-message">Valor ingresado no válido</p>
+            <label for="inputPrecios">Precio</label>
+            <input formControlName="precio" type="number" class="form-control" placeholder="(en Lempiras)" id="inputPrecios" required>
+          </div>
+          <div class="form-group col-md-4 text-center">
+            <p [ngClass]="{'display-block': codigoEmpProd}" class="error-message">Código de Empresa no válido</p>
+            <label for="inputCodEmpresa">Cod. Emp.</label>
+            <input formControlName="codigoEmpProd" type="text" class="form-control" placeholder="ejem. pchick" id="inputCodEmpresa" required>
+          </div>
+        </div>
+      </form>
+      <div class="form-group row pb-2">
+        <label class="col-sm-4 col-form-label">Añadir una imagen</label>
+        <div class="input-group col-sm-8 d-flex align-items-center">
+          <div class="custom-file">
+            <input type="file" #inputProduct class="custom-file-input" accept="image/*" class="form-control d-none" (change)="productPreview($event)">
+            <div class="btn btn-primary" (click)="inputProduct.click()"><fa-icon [icon]="faChevronCircleUp" class="px-1"></fa-icon>Seleccionar</div>
+          </div>
+          <div class="col-md-4 mx-3">
+            <div style="background-color: #F5F6F7; width: 50px; height: 50px;">
+              <div *ngIf="imgURL && imgURL !== ''">
+                  <img [src]="imgURL" style="width: 50px; height: 50px;">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="modal-footer">
+      <button type="submit" class="btn btn-primary" (click)="subirImagen()" (click)="SuccessfullMessage()" (click)="limpiar()">
+        Agregar
+      </button>
+      <button type="button" class="btn btn-outline-danger mr-2" (click)="modal.close()" (click)="limpiar()">Cancelar</button>
+    </div>
+  </ng-template>-->
