--- a/src/app/client/status-pedido/status-pedido.component.html
+++ b/src/app/client/status-pedido/status-pedido.component.html
@@ -1,7 +1,7 @@
 <div id="map" #asMap class="col-12 col-sm-8 col-md-8 col-lg-8 col-xl-8 mt-3 mb-3" 
     style="margin-right: auto; margin-left: auto; height: 400px !important;" >
 </div>
-<div>
+<div style="text-align: center;">
     <h3>Este es tu estado de orden</h3>
     <div *ngIf="orderMap.statusOrden == 0">
         <h5> Orden tomada </h5>
